--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@ APP_URL=http://oscviva-v1.test
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=coopviva01
-DB_USERNAME=coopviva01
-DB_PASSWORD=hebreus6
+DB_DATABASE=oscviva
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
